--- a/listresume/templates/listresume/list.html
+++ b/listresume/templates/listresume/list.html
@@ -19,6 +19,7 @@
             border: 1px solid #ddd;
             padding: 8px;
             text-align: center;
+            text-transform: capitalize;
         }
         th {
             background-color: #f2f2f2;
@@ -63,7 +64,7 @@
             {% for item in items %}
             <tr>
                 <td>{{ item.id }}</td>
-                <td>{{ item.title }}</td>
+                <td>{{ item.name }} {% if item.gender == "male" %} s/o {% else %} d/o {% endif %} {{ item.parents_name }}</td>
                 <td>
                     <a href="{{item.id}}/view" class="button">View</a> &emsp;
                     <a href="{{item.id}}/edit/" class="button edit">Edit</a>
