removed reset and added home button

--- a/editresume/templates/editresume/edit.html
+++ b/editresume/templates/editresume/edit.html
@@ -172,7 +172,7 @@
         <input type="text" id="hobbies" name="hobbies" value="{{hobby.hobby}}"  style="width: 100%; padding: 5px;">
 
         <button type="submit" style="margin-top: 20px; padding: 10px 20px;">Update</button>
-        <button type="reset" style="margin-top: 20px; padding: 10px 20px;">Reset</button>
+        <button type="button" style="margin-top: 20px; padding: 10px 20px;"><a href="/"> Home </a></button>
     </form>
 </body>
 </html>
