--- a/listresume/templates/listresume/list.html
+++ b/listresume/templates/listresume/list.html
@@ -19,7 +19,6 @@
             border: 1px solid #ddd;
             padding: 8px;
             text-align: center;
-            text-transform: capitalize;
         }
         th {
             background-color: #f2f2f2;
@@ -63,12 +62,12 @@
         <tbody>
             {% for item in items %}
             <tr>
-                <td>{{ item.id }}</td>
-                <td>{{ item.name }} {% if item.gender == "male" %} s/o {% else %} d/o {% endif %} {{ item.parents_name }}</td>
+                <td>{{ forloop.counter }}</td>
+                <td>{{ item.name |title }} {% if item.gender == "male" %} s/o {% else %} d/o {% endif %} {{ item.parents_name | title }}</td>
                 <td>
                     <a href="{{item.id}}/view" class="button">View</a> &emsp;
-                    <a href="{{item.id}}/edit/" class="button edit">Edit</a>
-                    <a href="{{item.id}}/delete/" class="Delete">Delete</a>
+                    <a href="{{item.id}}/edit/" class="button edit">Edit</a> &emsp;
+                    <a href="{{item.id}}/delete/" >Delete</a>
                 </td>
             </tr>
             {% endfor %}
