try except added

--- a/createresume/templates/createresume/create.html
+++ b/createresume/templates/createresume/create.html
@@ -52,7 +52,7 @@
         <input type="date" id="dob" name="dob" required style="width: 100%; padding: 5px;">
 
         <label for="phnumber" style="display: block; margin-top: 10px;">Phone Number*:</label>
-        <input type="number" id="phNo" name="phNumber" required style="width: 100%; padding: 5px;">
+        <input type="number" id="phNo" name="phNumber" maxlength="10" required style="width: 100%; padding: 5px;">
 
         <label for="gender" style="display: block; margin-top: 10px;">Gender*:</label>
         <div style="margin-top: 10px;">
